change post names

--- a/_posts/2015-1-12-closure.md
+++ b/_posts/2015-1-12-closure.md
@@ -6,7 +6,7 @@ excerpt: "When you seek closure.."
 tags: [javascript, closure, scope]
 ---
 
-To understand closure, first we have to understanding scoping. See [link](/variable-scopes)
+To understand closure, first we have to understanding scoping. See [Scope]({% post_url 2015-1-5-variable-scopes %}).
 
 <br/>
 The concept is not too difficult to understand. For some reason, I always imaging a little sheep pen within another sheep pen, where the inner sheep pen is fenced by one way mirrors, so that the inner sheep can see the outer sheep but not vice versa.
